src/test/deca/context/valid/class/calls/field_assign.deca
// Description:
//    Affectation d'un int dans un champ de type float
//
// Resultats:
//    Cast correct
// 
// Historique:
//    cree le 01/01/2016

class A {
	float a;
}

{
	A a;
	int b;
	a.a = b;
}

