src/test/deca/context/invalid/class/calls/field_assign2.deca
// Description:
//    Affectation d'un champ de type float dans un int
//
// Resultats:
//    undefined field
// 
// Historique:
//    cree le 01/01/2016

class A {
	float a;
}

{
	A a;
	int b = a.a;
}

